# Foundry

./: .gitignore  AUDIT_2026-06-09.md  AUDIT_2026-07-01.md  AUDIT_FIXPLAN_2026-06-09.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  DEPLOY_SUMMARY.md  Dockerfile  FOUNDRY_MAP.md  HANDOFF.md  LOGIC_AUDIT.md  Makefile  OPEN_QUESTIONS.md  PIPELINE_MAP.md  README.md  activate.sh  config-bf16-zeroclaw.yaml  config.yaml  docker-compose.yml  fast_export.py  fast_train_zeroclaw.py  patch_gguf_metadata.py  pipeline.py  pyproject.toml  run_magicquant_upload.py  test_pipeline.sh  train.py  train_zeroclaw.py
.github/workflows/: ci.yml
configs/: default.yaml  gptq-zeroclaw.yaml
core/: __init__.py  _export_entry.py  _heretic_entry.py  _magicquant_entry.py  _qat_entry.py  _reap_entry.py  _rocmfpx_entry.py  _train_entry.py  _upload_entry.py  config.py  dataset_format.py  fast_export.py  fast_train_zeroclaw.py  hf_upload.py  log.py  logging_config.py  markers.py  pipeline.py  preflight.py  reap_common.py  services.py  serving.py
data/: sample_data.jsonl  zeroclaw_training_data.jsonl
datagen/: generate.py  generate_bulk.py  scenarios.py  scenarios_extended.py  scenarios_generated.py  zeroclaw_tools.py
docs/: rocmfpx.md
docs/maestro/specs/: 2026-07-01-magicquant-rocmfpx-composition-design.md  2026-07-01-rocmfpx-stage-design.md
docs/superpowers/plans/: 2026-05-07-quark-onnx-stage.md
docs/superpowers/specs/: 2026-05-07-flm-q4nx-stage-design.md  2026-05-07-quark-onnx-stage-design.md
gardener/: README.md  extract_references.py  generate.py  monitor.sh  system_prompt.py  topics.py  train.sh
legacy/: train.py  train_zeroclaw.py
scripts/: patch_gguf_metadata.py  run_agentworld_mqhybrid.py  run_agentworld_quant.py  run_magicquant_upload.py  serve.sh  upload_dataset.py
tests/: conftest.py  test_attn_resolution.py  test_config_load.py  test_dataset_format.py  test_fast_load_versions.py  test_gguf_source_routing.py  test_imports.py  test_magicquant_knobs.py  test_mmproj_generation.py  test_pipeline.sh  test_preflight.py  test_qat_service.py  test_reap_arch.py  test_reap_service.py  test_rocmfpx_entry.py  test_run_timeout.py  test_script_equivalence.py  test_serving.py  test_skip_markers.py  test_source_resolution.py  test_stage_cleanup.py  test_stage_entries.py  test_token_scope.py  test_training_integration.py  test_ui_security.py
ui/: app.py  config.json  index.html  run.sh
