[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foundry"
version = "0.3.0"
description = "ML fine-tuning and hybrid quantization pipeline for AMD ROCm"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "lmcoleman"},
]

dependencies = [
    # Core ML
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "datasets>=2.18.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",

    # HuggingFace Hub
    "huggingface_hub>=0.20.0",
    "hf_transfer>=0.1.0",

    # Web UI
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Configuration and logging
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",

    # NOTE: magicquant + heretic-llm are sibling pipeline tools invoked as
    # SUBPROCESSES (see core/_magicquant_entry.py / _heretic_entry.py), not
    # imported by the foundry package. They are NOT PyPI-installable, so they live
    # in the optional [external] extra below rather than hard dependencies — that
    # keeps `pip install .` and the Docker image buildable without the sibling repos.

    # Utilities
    "Pillow>=9.0.0",
    "tqdm>=4.60.0",
    "psutil>=5.9.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]
# Sibling pipeline tools, invoked as subprocesses — install from their local repos
# (e.g. `pip install -e ../MagicQuant`), not PyPI. Not needed to build the package.
external = [
    "magicquant>=0.1.0",
    "heretic-llm>=0.1.0",
]

[project.scripts]
foundry = "core.pipeline:main"
foundry-upload = "core.hf_upload:main"

[project.urls]
Repository = "https://github.com/lucasmcoleman/Foundry"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (heavy compute; deselect with -m 'not slow')",
    "gpu: marks tests that require a GPU / ROCm runtime (not run in CI)",
]
